SERVER-28545 don't schedule setFollowerMode on ReplicationExecutor